--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </style>
 </head>
 <body>
+  <a href="https://github.com/mikeflynn/egg.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
   <img id="egggif" src="http://media.giphy.com/media/4hnQDVKVARZ6w/giphy.gif" />
   <div class="container">
     <h1>Egg.js</h1>
@@ -33,7 +34,7 @@
 
     <h3>Example</h3>
     <p>It's really easy to use. Just include the egg.js file on the page...</p>
-    <pre>&lt;script type="text/javascript" src="/path/to/egg.js"&gt;&lt;/script&gt;</pre>
+    <pre>&lt;script type="text/javascript" src="<a href="http://thatmikeflynn.com/egg.js/egg.js">http://thatmikeflynn.com/egg.js/egg.js</a>"&gt;&lt;/script&gt;</pre>
     <p>...then use the AddCode() function to add in your easter eggs. You need to pass it the list of keycodes (<a href="http://www.cambiaresearch.com/articles/15/javascript-char-codes-key-codes">reference</a>), a function to trigger when it happens, and then an optional set of metadata, which can be anything from a string to an object. </p>
     <pre>
 var egg = new Egg();
