--- a/index.html
+++ b/index.html
@@ -56,5 +56,16 @@ egg
     <h3>Credits</h3>
     <p>Created by Mike Flynn (<a href="http://twitter.com/thatmikeflynn">@thatmikeflynn</a>) and Rob McVey (<a href="http://twitter.com/negative_sleep">@negative_sleep</a>)</p>
   </div>
+
+  <script>
+    (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+    (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+    m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+    })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+    ga('create', 'UA-51642712-3', 'auto');
+    ga('send', 'pageview');
+
+  </script>
 </body>
 </html>
