Moved to using the current master branch version of egg.js for example

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="text/javascript" src="egg.js"></script>
+  <script type="text/javascript" src="https://rawgit.com/mikeflynn/egg.js/master/egg.min.js"></script>
   <script type="text/javascript">
     var egg = new Egg();
     egg.AddCode("38,38,40,40,37,39,37,39,66,65", function() {
