--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
   <div class="container">
     <h1>Egg.js</h1>
     <p>Egg.js is a simple JS library that has no prerequisites and allows you to easily add web easter eggs by watching the user's key strokes.</p>
-    <p>Type the Konami code (up, up, down, down, left, right, b, a) to test it out.</p>
+    <p>Type the Konami code (up, up, down, down, left, right, left, right, b, a) to test it out.</p>
 
     <h3>Example</h3>
     <p>It's really easy to use. Just include the egg.js file on the page...</p>
