--- a/index.html
+++ b/index.html
@@ -47,9 +47,15 @@ egg
   .AddHook(function(){
     console.log("Hook called for: " + this.activeEgg.keys);
     console.log(this.activeEgg.metadata);
-  })
-  .Listen();
+  }).Listen();
     </pre>
+    You can add an easter egg via the constructor:
+    <pre>
+var egg = new Egg("up,up,down,down,left,right,left,right,b,a", function() {
+  jQuery('#egggif').fadeIn(500, function() {
+    window.setTimeout(function() { jQuery('#egggif').hide(); }, 5000);
+  });
+}).Listen();</pre>
     <p>You can also add a hook, as shown above using AddHook(), that will run after any egg code is triggered. You could use it to fire a Google Analytics event or send out a tweet that someone finally found your easter egg. Hooks get access to the whole Egg.js object so you can pull information about the easter egg that fired via this.activeEgg</p>
     <h3>Why?</h3>
     <p>I put an easter egg in pretty much everything I make and after copying the same basic code over and over again I figured I should make it in to a simple library for my own use.</p>
