Updated documentation page to use lowercase method names

--- a/index.html
+++ b/index.html
@@ -8,16 +8,16 @@
   <script type="text/javascript" src="https://rawgit.com/mikeflynn/egg.js/master/egg.min.js"></script>
   <script type="text/javascript">
     var egg = new Egg();
-    egg.AddCode("up,up,down,down,left,right,left,right,b,a", function() {
+    egg.addCode("up,up,down,down,left,right,left,right,b,a", function() {
       jQuery('#egggif').fadeIn(500, function() {
         window.setTimeout(function() { jQuery('#egggif').hide(); }, 5000);
       });
     }, "konami-code");
-    egg.AddHook(function(){
+    egg.addHook(function(){
       console.log("Hook called for: " + this.activeEgg.keys);
       console.log(this.activeEgg.metadata);
     });
-    egg.Listen();
+    egg.listen();
   </script>
 
   <style type="text/css">
@@ -35,19 +35,19 @@
     <h3>Example</h3>
     <p>It's really easy to use. Just include the egg.js file on the page...</p>
     <pre>&lt;script type="text/javascript" src="<a href="https://github.com/mikeflynn/egg.js/blob/master/egg.js">http://thatmikeflynn.com/egg.js/egg.min.js</a>"&gt;&lt;/script&gt;</pre>
-    <p>...then use the AddCode() function to add in your easter eggs. You don't need to know the special Javascript key codes, as you can use plain English to define your egg (but you can use key codes if you want to). You'll also need a function to trigger when it happens, and then an optional set of metadata, which can be anything from a string to an object. </p>
+    <p>...then use the addCode() function to add in your easter eggs. You don't need to know the special Javascript key codes, as you can use plain English to define your egg (but you can use key codes if you want to). You'll also need a function to trigger when it happens, and then an optional set of metadata, which can be anything from a string to an object. </p>
     <pre>
 var egg = new Egg();
 egg
-  .AddCode("up,up,down,down,left,right,left,right,b,a", function() {
+  .addCode("up,up,down,down,left,right,left,right,b,a", function() {
     jQuery('#egggif').fadeIn(500, function() {
       window.setTimeout(function() { jQuery('#egggif').hide(); }, 5000);
     });
   })
-  .AddHook(function(){
+  .addHook(function(){
     console.log("Hook called for: " + this.activeEgg.keys);
     console.log(this.activeEgg.metadata);
-  }).Listen();
+  }).listen();
     </pre>
     You can add an easter egg via the constructor:
     <pre>
@@ -55,8 +55,8 @@ var egg = new Egg("up,up,down,down,left,right,left,right,b,a", function() {
   jQuery('#egggif').fadeIn(500, function() {
     window.setTimeout(function() { jQuery('#egggif').hide(); }, 5000);
   });
-}).Listen();</pre>
-    <p>You can also add a hook, as shown above using AddHook(), that will run after any egg code is triggered. You could use it to fire a Google Analytics event or send out a tweet that someone finally found your easter egg. Hooks get access to the whole Egg.js object so you can pull information about the easter egg that fired via this.activeEgg</p>
+}).listen();</pre>
+    <p>You can also add a hook, as shown above using addHook(), that will run after any egg code is triggered. You could use it to fire a Google Analytics event or send out a tweet that someone finally found your easter egg. Hooks get access to the whole Egg.js object so you can pull information about the easter egg that fired via this.activeEgg</p>
     <h3>Why?</h3>
     <p>I put an easter egg in pretty much everything I make and after copying the same basic code over and over again I figured I should make it in to a simple library for my own use.</p>
     <h3>Credits</h3>
