--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
   <a href="https://github.com/mikeflynn/egg.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
   <img id="egggif" src="http://media.giphy.com/media/4hnQDVKVARZ6w/giphy.gif" />
   <div class="container">
+    <img src="eggjs.png" style="float: right; margin: 15px;" />
     <h1>Egg.js</h1>
     <p>Egg.js is a simple JS library that has no prerequisites and allows you to easily add web easter eggs by watching the user's key strokes.</p>
     <p>Type the Konami code (up, up, down, down, left, right, left, right, b, a) to test it out.</p>
