--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-  <script type="text/javascript" src="https://rawgit.com/mikeflynn/egg.js/9d4e0518cf9db87f634b36df5ad805ab957dcac3/egg.min.js"></script>
+  <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/egg.js/1.0/egg.min.js"></script>
   <script type="text/javascript">
     var egg = new Egg();
     egg.addCode("up,up,down,down,left,right,left,right,b,a", function() {
@@ -36,7 +36,7 @@
 
     <h3>Example</h3>
     <p>It's really easy to use. Just include the egg.js file on the page...</p>
-    <pre>&lt;script type="text/javascript" src="<a href="https://github.com/mikeflynn/egg.js/blob/master/egg.js">https://cdn.rawgit.com/mikeflynn/egg.js/master/egg.min.js</a>"&gt;&lt;/script&gt;</pre>
+    <pre>&lt;script type="text/javascript" src="<a href="https://github.com/mikeflynn/egg.js/blob/master/egg.js">https://cdnjs.cloudflare.com/ajax/libs/egg.js/1.0/egg.min.js</a>"&gt;&lt;/script&gt;</pre>
     <p>...then use the addCode() function to add in your easter eggs. You don't need to know the special Javascript key codes, as you can use plain English to define your egg (but you can use key codes if you want to). You'll also need a function to trigger when it happens, and then an optional set of metadata, which can be anything from a string to an object. </p>
     <pre>
 var egg = new Egg();
