Fixed non-ssl links.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Egg.js - A Simple Way to Add Easter Eggs to Your Site</title>
 
-  <link rel="stylesheet" type="text/css" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+  <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/egg.js/1.0/egg.min.js"></script>
@@ -27,7 +27,7 @@
 </head>
 <body>
   <a href="https://github.com/mikeflynn/egg.js"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/365986a132ccd6a44c23a9169022c0b5c890c387/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f7265645f6161303030302e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png"></a>
-  <img id="egggif" src="http://media.giphy.com/media/4hnQDVKVARZ6w/giphy.gif" />
+  <img id="egggif" src="https://media.giphy.com/media/4hnQDVKVARZ6w/giphy.gif" />
   <div class="container">
     <img src="eggjs.png" style="float: right; margin: 15px;" />
     <h1>Egg.js</h1>
@@ -64,7 +64,7 @@ var egg = new Egg("up,up,down,down,left,right,left,right,b,a", function() {
     <h3>Why?</h3>
     <p>I put an easter egg in pretty much everything I make and after copying the same basic code over and over again I figured I should make it in to a simple library for my own use.</p>
     <h3>Credits</h3>
-    <p>Created by Mike Flynn (<a href="http://twitter.com/thatmikeflynn">@thatmikeflynn</a>) and Rob McVey (<a href="http://twitter.com/negative_sleep">@negative_sleep</a>)</p>
+    <p>Created by Mike Flynn (<a href="https://twitter.com/thatmikeflynn">@thatmikeflynn</a>) and Rob McVey (<a href="https://twitter.com/negative_sleep">@negative_sleep</a>)</p>
   </div>
 
   <script>
